--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
+StatsBase = "0.33"
 julia = "1"
 
 [extras]
