--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,10 @@ authors = ["tlorans <thomaslorans@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
