--- a/Project.toml
+++ b/Project.toml
@@ -6,10 +6,14 @@ version = "0.1.0"
 [deps]
 COSMO = "1e616198-aa4e-51ec-90a2-23f7fbd31d8d"
 Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Fontconfig = "186bb1d3-e1f7-5a2c-a377-96d770f13627"
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+Mimi = "e4e893b0-ee5e-52ea-8111-44b3bdec128c"
+MimiDICE2010 = "4f2c5d70-42a7-11e9-1de8-c370bd984083"
+MimiFUND = "b3ba11de-429f-11e9-29f7-cb478ab96e7c"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
