--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,8 @@ GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Mimi = "e4e893b0-ee5e-52ea-8111-44b3bdec128c"
+MimiFUND = "b3ba11de-429f-11e9-29f7-cb478ab96e7c"
+MimiIWG = "b1d80750-afbf-11e9-0666-4f25b2ea2b65"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
